--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
+msgpack
+regex
+tqdm
 numpy
 transformers
+packaging
 datasets
 wandb
-torch>=1.5.0
-torchaudio
+#torchaudio==0.8.0
 jiwer==2.2.0
 lang-trans==0.6.0
 librosa==0.8.0
 soundfile
+
+
